# support-panel

./: Cargo.toml
debian/: control
src/: gresource.rs  lib.rs  main.rs
src/components/: info_button.rs  log_dialog.rs  mod.rs  panel.rs
src/widgets/: info_box.rs  info_description.rs  info_label.rs  mod.rs
