[package]
name = "cosmic-support-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
as-result = "0.2.1"
better-panic = "0.3.0"
futures = "0.3.19"
gtk4 = "0.4.5"
once_cell = "1.9.0"
rust-embed = "6.3.0"
tempfile = "3.3.0"
i18n-embed-fl = "0.6.1"
concat-in-place = "1.0.0"
shrinkwraprs = "0.3.0"
gdk-pixbuf = "0.15.1"
dirs = "4.0.0"
fomat-macros = "0.3.1"

[dependencies.i18n-embed]
version = "0.13.1"
features = ["fluent-system", "desktop-requester"]

[dependencies.tokio]
version = "1.15.0"
features = ["full"]

[dependencies.cosmic-component-system]
path = "../libcosmic/crates/component-system"
# git = "https://github.com/pop-os/libcosmic"
# branch = "ccs"
